--- a/charts/budget/templates/deployment.yaml
+++ b/charts/budget/templates/deployment.yaml
@@ -45,6 +45,9 @@ spec:
         env:
         - name: VERSION
           value: {{ .Chart.Version }}
+	-name: MONGO_HOST
+          value: {{ template "fullname" . }}-db
+
 {{- range $pkey, $pval := .Values.env }}
         - name: {{ $pkey }}
           value: {{ quote $pval }}
