--- a/charts/budget/requirements.yaml
+++ b/charts/budget/requirements.yaml
@@ -1,6 +1,7 @@
 dependencies:
-- name: mongodb
-  alias: budget-db
-  repository:  https://charts.bitnami.com/bitnami
-  condition: db.enabled
+ - name: mongodb
+   alias: budget-db
+   version: 5.3.0	
+   repository:  https://charts.bitnami.com/bitnami
+   condition: db.enabled
 
